[tool.poetry]
name = "mlgb"
version = "0.1.0"
description = ""
authors = ["cheyujie <yujie.che@aminer.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
setuptools-rust = "^1.10.2"
torch = "^2.5.1"
torchaudio = "^2.5.1"
transformers = "^4.46.3"
accelerate = "^1.1.1"
scipy = "^1.14.1"
streamlit = "^1.40.2"
moviepy = "^2.1.1"
streamlit-mic-recorder = "^0.0.8"
librosa = "^0.10.2.post1"
datasets = "^3.1.0"
nvitop = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
